// Copyright (c) 2021 Gitpod GmbH. All rights reserved.
// Licensed under the GNU Affero General Public License (AGPL).
// See License-AGPL.txt in the project root for license information.

syntax = "proto3";

package contentservice;

option go_package = "github.com/gitpod-io/gitpod/content-service/api";

service WorkspaceService {
    // DeleteWorkspace deletes the content of a single workspace
    rpc DeleteWorkspace(DeleteWorkspaceRequest) returns (DeleteWorkspaceResponse) {};

    // WorkspaceSnapshotExists checks whether the snapshot exists or not
    rpc WorkspaceSnapshotExists(WorkspaceSnapshotExistsRequest) returns (WorkspaceSnapshotExistsResponse) {};
}

message DeleteWorkspaceRequest {
    string owner_id = 1;
    string workspace_id = 2;
    bool include_snapshots = 3;
}
message DeleteWorkspaceResponse {}

message WorkspaceSnapshotExistsRequest {
    string owner_id = 1;
    string workspace_id = 2;
    string filename = 3;
}
message WorkspaceSnapshotExistsResponse {
    bool exists = 1;
}
